fix visibility of the popup

--- a/style.css
+++ b/style.css
@@ -104,7 +104,7 @@ body
 
 #popup
 {
-    visibility: visible;
+    visibility: hidden;
     display: flex;
     position: absolute;
     width: 100%;
